# LearnVectorDB

./: .gitignore  Chroma_DB_Demo.ipynb  README.md  extract_information.py  main.py  movie_recs.py  pyproject.toml
sample_files/: aerodynamics.txt  chat_conversation.txt  log_example.txt
