[project]
name = "learnvectordb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "gradio>=6.6.0",
    "langchain<0.1",
    "lxml>=6.0.2",
    "openai>=2.21.0",
    "pymongo>=4.16.0",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "unstructured>=0.20.8",
]
